Изменил название сайта на нужное.

--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Bots Constructor</title>
     <link href="@Url.Content("~/vendor/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/css/simple-sidebar.css")" rel="stylesheet">
     <script src="@Url.Content("~/vendor/jquery/jquery.min.js")"></script>
