--- a/Website/Views/Account/Register.cshtml
+++ b/Website/Views/Account/Register.cshtml
@@ -46,6 +46,10 @@
             background-color: #42AEEC;
             color: #fff;
         }
+
+        .input-group-text {
+            width: 2.5rem;
+        }
     </style>
     @*<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>*@
     <script src="@Url.Content("~/vendor/jquery/jquery.min.js")"></script>
