--- a/Website/Views/Main/Index.cshtml
+++ b/Website/Views/Main/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
    
     <div class="container">
-        <div class="row m-1 justify-content-md-center">
+        @*<div class="row m-1 justify-content-md-center">
             <div class="col-sm-3 m-1 ">
                 <div class="embed-responsive " style="padding-top: 177%;">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4bRe4eQLKBM" frameborder="0" allowfullscreen></iframe>
@@ -39,15 +39,25 @@
             </div>
 
 
-        </div>
+        </div>*@
 
-        <div class="row m-2">
+        @*<div class="row m-2">
             <div class="col ">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nDawGQcH17E" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
+        </div>*@
+
+        <div class="row m-2">
+            <div class="col ">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=zUc8RN0OmgA&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
+
+
 
 
 
