--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -353,7 +353,7 @@
                                 <strong>@ViewData["sum"] грн</strong>
                             </div>
                             <div class="col-3">
-                                <a  class="btn btn-info btn-lg btn-block" asp-controller="BotForSalesSettings" asp-action="PriceDetails" asp-route-botId="@ViewData["botId"]" >Подробнее</a>
+                                <button disabled class="btn btn-info btn-lg btn-block" asp-controller="BotForSalesSettings" asp-action="PriceDetails" asp-route-botId="@ViewData["botId"]" >Подробнее</button>
                             </div>
                         </div>
                     </div>
@@ -402,7 +402,6 @@
                             </div>
 
                             <div class="col-4">
-                                @*<button type="button" class="btn btn-outline-danger btn-lg btn-block" onclick="deleteBot()">Удалить</button>*@
                                 <button type="button" class="btn btn-outline-danger btn-lg btn-block" onclick="deleteBot()">Удалить</button>
                             </div>
                         </div>
