Вынес регистрацию в отдельный контроллер

--- a/Website/Views/Account/Login.cshtml
+++ b/Website/Views/Account/Login.cshtml
@@ -146,7 +146,7 @@
 
         </form>
 
-        <div class="hint-text small"> @Localizer["Don't have an account?"]  <a asp-action="Register" asp-controller="Account" class="text-success">@Localizer["Registration"] </a></div>
+        <div class="hint-text small"> @Localizer["Don't have an account?"]  <a asp-action="Register" asp-controller="Registration" class="text-success">@Localizer["Registration"] </a></div>
 
     </div>
 
