--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <a class="p-2 text-dark" asp-area="" asp-controller="Test2" asp-action="Index">Test2</a>
                 <a class="p-2 text-dark" asp-area="" asp-controller="Test3" asp-action="Index" @*asp-route-imageId="asdfas6465sd4f654df"*@ >Test3</a>
             </nav>
-            <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Register">@Localizer["SignUp"]</a>
+            <a class="btn btn-outline-primary" asp-controller="Registration" asp-action="Register">@Localizer["SignUp"]</a>
         </div>
     </header>
     <div class="container">
