--- a/Website/Views/PasswordReset/PasswordResetEnterEmail.cshtml
+++ b/Website/Views/PasswordReset/PasswordResetEnterEmail.cshtml
@@ -87,7 +87,7 @@
                                 <p>You can reset your password here.</p>
                                 <div class="panel-body">
 
-                                    <form id="register-form" role="form" autocomplete="off" asp-controller="Account" asp-action="PasswordReset">
+                                    <form id="register-form" role="form" autocomplete="off" asp-controller="PasswordReset" asp-action="PasswordResetEnterEmail">
 
                                         <div class="form-group">
                                             <div class="input-group">
