--- a/Website/Views/Account/Login.cshtml
+++ b/Website/Views/Account/Login.cshtml
@@ -139,7 +139,7 @@
 
             <div class="clearfix">
                 <label class="pull-left checkbox-inline"><input type="checkbox">@Localizer["RememberMe"] </label>
-                <a asp-controller="Account" asp-action="PasswordResetEnterEmail" class="pull-right text-success">@Localizer["ForgotPassword?"] </a>
+                <a asp-controller="PasswordReset" asp-action="PasswordResetEnterEmail" class="pull-right text-success">@Localizer["ForgotPassword?"] </a>
             </div>
 
             <div class="validation" asp-validation-summary="ModelOnly"></div>
