Починил ссылку на видео.

--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -233,7 +233,7 @@
                                 <strong>18.07.2019 16:53</strong>
                             </div>
                             <div class="col-4">
-                                <button type="button" class="btn btn-info ">Просмотреть</button>
+                                <button type="button" class="btn btn-info" style="width: 9rem;">Просмотреть</button>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                                 <strong>18.07.2019 16:53</strong>
                             </div>
                             <div class="col-4 ">
-                                <a class="btn btn-info " asp-controller="BotForSalesEditing" asp-action="SalesTreeEditor" asp-route-botId="@ViewData["botId"]">Редактировать</a>
+                                <a class="btn btn-info" style="width: 9rem;" asp-controller="BotForSalesEditing" asp-action="SalesTreeEditor" asp-route-botId="@ViewData["botId"]">Редактировать</a>
                             </div>
                         </div>
                     </div>
