--- a/Website/Views/Main/Index.cshtml
+++ b/Website/Views/Main/Index.cshtml
@@ -52,7 +52,7 @@
         <div class="row m-2">
             <div class="col ">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=zUc8RN0OmgA&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zUc8RN0OmgA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
