--- a/Website/Views/News/Index.cshtml
+++ b/Website/Views/News/Index.cshtml
@@ -12,7 +12,7 @@
 @{
     for (int i = 0; i < 7; i++)
     {
-        <div class="card mb-3 shadow" style="max-width: 960px;max-height:200px;">
+        <div class="card mb-3 shadow" style="max-width: 960px; max-height: 200px; margin: auto;">
             <div class="row no-gutters">
                 <div class="col">
                     <div class="card-body">
