--- a/Website/Views/PasswordReset/PasswordResetEnterEmail.cshtml
+++ b/Website/Views/PasswordReset/PasswordResetEnterEmail.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@{
     Layout = "_LayoutHead";
 }
 <style>
@@ -74,43 +76,43 @@
 </style>
 
 
-        @* Форма для ввода email-а *@
-        <div class="form-gap"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="panel panel-default">
+@* Форма для ввода email-а *@
+<div class="form-gap"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="text-center">
+                        <h3><i class="fa fa-lock fa-4x"></i></h3>
+                        <h2 class="text-center">@Localizer["Forgot Password?"]</h2>
+                        <p>@Localizer["You can reset your password here."] </p>
                         <div class="panel-body">
-                            <div class="text-center">
-                                <h3><i class="fa fa-lock fa-4x"></i></h3>
-                                <h2 class="text-center">Forgot Password?</h2>
-                                <p>You can reset your password here.</p>
-                                <div class="panel-body">
 
-                                    <form id="register-form" role="form" autocomplete="off" asp-controller="PasswordReset" asp-action="PasswordResetEnterEmail">
+                            <form id="register-form" role="form" autocomplete="off" asp-controller="PasswordReset" asp-action="PasswordResetEnterEmail">
 
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                <input id="email" name="email" placeholder="email address" class="form-control" type="email">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
-                                        </div>
-
-                                        <input type="hidden" class="hide" name="token" id="token" value="">
-                                    </form>
-                                    <div class="validation" asp-validation-summary="ModelOnly"></div>
-
-
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                                        <input id="email" name="email" placeholder="email" class="form-control" type="email">
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="form-group">
+                                    <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="@Localizer["Reset Password"]" type="submit">
+                                </div>
+
+                                <input type="hidden" class="hide" name="token" id="token" value="">
+                            </form>
+                            <div class="validation" asp-validation-summary="ModelOnly"></div>
+
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
 
 
