--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -190,7 +190,7 @@
                                 <a class="dropdown-item" href="#">Я</a>
                                 <a class="dropdown-item" href="#">не знаю</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-controller="Account" asp-action="Logout">Выйти</a>
+                                <a class="dropdown-item" asp-controller="SignOut" asp-action="Logout">Выйти</a>
                             </div>
                         </li>
                     </ul>
