--- a/Website/Views/TokenReplacement/TokenChange.cshtml
+++ b/Website/Views/TokenReplacement/TokenChange.cshtml
@@ -5,27 +5,43 @@
     Layout = "_LayoutHome";
 }
 
-<div class="text-center">
-    <h1 class="display-4">It's me BotEditing TokenChange</h1>
-</div>
+<div class="container">
 
-<div class="alert alert-danger" role="alert">
-    Это уведомление об опасности — check it out!
-</div>
+    <div class="m-4"></div>
 
-<form asp-action="TokenChange" asp-controller="TokenReplacement" asp-route-botId="@ViewData["botId"]"asp-route-oldToken="@ViewData["currentToken"]" asp-anti-forgery="true" class="form-inline">
-
-    <label class="sr-only" for="inlineFormInputName2">Name</label>
-    <input type="text" class="form-control mb-2 mr-sm-2" value="@ViewData["currentToken"]" readonly>
-    <input asp-for="Token" type="text" class="form-control mb-2 mr-sm-2" placeholder="new token">
-
-    <div class="form-group">
-        <input type="submit" value="Submit" class="btn btn-sm btn-danger" />
+    <div class="alert alert-danger" role="alert">
+        При введении нового токена бот будет остановлен.
     </div>
 
-</form>
+    <form asp-action="TokenChange" asp-controller="TokenReplacement" asp-route-botId="@ViewData["botId"]" asp-route-oldToken="@ViewData["currentToken"]" asp-anti-forgery="true" class="form-inline">
 
-<div class="validation" asp-validation-summary="ModelOnly"></div>
+        <div class="container align-items-center">
+
+        <div class="row ">
+            <input type="text" class="form-control mb-2 mr-sm-2" style="width:100%;" value="@ViewData["currentToken"]" readonly>
+        </div>
+        <div class="row">
+            <input asp-for="Token" type="text" class="form-control mb-2 mr-sm-2"style="width:100%;" placeholder="новый токен">
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Поменять токен" style="width:100%;" class="btn btn-lg btn-block btn-danger" />
+        </div>
+
+        </div>
+    </form>
+
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
+
+</div>
+
+
+
+
+
+
+
+
 
 @section scripts{
 
