--- a/Website/Views/PasswordReset/PasswordResetOnlyNewPass.cshtml
+++ b/Website/Views/PasswordReset/PasswordResetOnlyNewPass.cshtml
@@ -33,7 +33,7 @@
                                 <p>Вы можете сделать это здесь.</p>
                                 <div class="panel-body">
 
-                                    <form id="myform982356" role="form" autocomplete="off" asp-controller="AccountManagement" asp-action="PasswordResetOnlyNewPass" asp-route-accountId="@ViewData["accountId"]">
+                                    <form role="form" autocomplete="off" asp-controller="PasswordReset" asp-action="PasswordResetOnlyNewPass" asp-route-targetAccountId="@ViewData["accountId"]" asp-route-guid="@ViewData["guid"]">
 
 
 
