Немного поработал над дизайном.

--- a/Website/Views/AccountManagement/Index.cshtml
+++ b/Website/Views/AccountManagement/Index.cshtml
@@ -24,7 +24,6 @@
             </div>
 
             <div class="p-2 ">
-
                 <div class="row  align-items-center m-1">
                     <div class="col">
                         <div class="row">
@@ -32,12 +31,13 @@
                                 Баланс
                             </div>
                         </div>
-                        <div class="row h1" style="color:darkred;">
-                            Сюда нужно придумать какой-то текст.
+                        <div class="row">
+                            Текущий баланс аккаунта.
+                            <small><i>На данный момент функции пополнения баланса и списывания денег отключены.</i></small>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="h1 text-center ">
+                        <div class="h1 text-center m-auto">
                             @ViewData["money"] ₴
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            Боты тоже хотят кушать
+                            Боты тоже хотят кушать.
                         </div>
                     </div>
                     <div class="col">
@@ -118,7 +118,7 @@
                         <div class="row">
 
                             Если вы считаете, что кто-то может воспользоваться вашим аккаунтом на другом устройстве, то используйте эту опцию, чтобы принудительно заставить пройти авторизацию.
-
+                            <small><i>Эта функция пока что отключена.</i></small>
 
 
                         </div>
@@ -140,8 +140,8 @@
                         </div>
                         <div class="row">
 
-                            Если вы считаете, что кто-то пользуется вашим аккаунтом, то для проверки этого просмотрите список дат входа в аккаунт
-
+                            Если вы считаете, что кто-то пользуется вашим аккаунтом, то для проверки этого просмотрите список дат входа в аккаунт.
+                            <small><i>Эта функция пока что отключена.</i></small>
 
 
                         </div>
@@ -179,7 +179,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            Если вы хотите зачем-то поменять имя аккаунта, то милости просим
+                            Если вы хотите зачем-то поменять имя аккаунта, то милости просим.
+                            <small><i>Эта функция пока что отключена.</i></small>
                         </div>
                     </div>
                     <div class="col">
@@ -198,7 +199,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            Если вы хотите номер телефона, то милости просим
+                            Если вы хотите сменить номер телефона, то милости просим.
+                            <small><i>Эта функция пока что отключена.</i></small>
                         </div>
                     </div>
                     <div class="col">
@@ -217,7 +219,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            Если вы хотите номер email, то милости просим
+                            Если вы хотите сменить email, то милости просим.
+                            <small><i>Эта функция пока что отключена.</i></small>
                         </div>
                     </div>
                     <div class="col">
