--- a/Website/Views/Main/Index.cshtml
+++ b/Website/Views/Main/Index.cshtml
@@ -9,13 +9,14 @@
 <div class="text-center">
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Создаём ботов</h1>
-        <p class="lead">Качественно создаём качественных ботов</p>
+        <h1 class="display-4">Создайте своего бота</h1>
+        <p class="lead">Совершенно без навыков программирования, быстро и просто</p>
     </div>
 
    
     <div class="h4" style="text-align:justify;font-weight:400;">
-        Bots constructor — платформа, которая позволяет максимально простым образом создавать ботов для мессенджера Telegram. Такие боты могут быть использованы для продаж, сбора отзывов и захвата мира. Ниже показаны примеры таких ботов.
+        <strong>Bots constructor</strong> — платформа, которая позволяет максимально простым образом создавать ботов для мессенджера Telegram. Такие боты могут быть использованы для оформления заказов, сбора отзывов или продвижения бизнеса другими способами.
+        <br /><small><i>В данный момент доступен только бот для заказов, другие боты находятся в разработке.</i></small> @*Ниже показаны примеры таких ботов.*@
     </div>
    
     <div class="container">
