--- a/Website/Views/ModeratorManagement/Index.cshtml
+++ b/Website/Views/ModeratorManagement/Index.cshtml
@@ -28,7 +28,7 @@
                 <input id="input_1" class="form-control mr-sm-2 " type="search" placeholder="Email" aria-label="Search">
             </div>
             <div class="col-2">
-                <button class="btn btn-outline-info my-2 my-sm-0 " type="button" onclick="inviteANewModerator()">Пригласить</button>
+                <button class="btn btn-outline-info my-2 my-sm-0 w-100" type="button" onclick="inviteANewModerator()">Пригласить</button>
             </div>
         </div>
 
