--- a/Website/Views/Shared/HintModerators.cshtml
+++ b/Website/Views/Shared/HintModerators.cshtml
@@ -2,6 +2,6 @@
 
 <div class=" container">    
     <div class="alert alert-info" role="alert">
-        Модераторы могут только отвечать принимать заказы. У них доступа к содержимому разметки бота. Они не могут его останавливать или запускать.
+        Модераторы могут только принимать заказы и отвечать на них. У них нет доступа к содержимому разметки бота. Они не могут его останавливать или запускать.
     </div>
 </div>
