--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -177,18 +177,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Что <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">Bots</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Тут</a>
+                            <a class="nav-link" asp-controller="Orders" asp-action="Orders2">Orders</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Написать?
+                                Menu
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Я</a>
-                                <a class="dropdown-item" href="#">не знаю</a>
+                                @*<a class="dropdown-item" href="#">Something</a>*@
+                                <a class="dropdown-item" asp-controller="AccountManagement" asp-action="Index">Account</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-controller="SignOut" asp-action="Logout">Выйти</a>
                             </div>
