--- a/Website/wwwroot/css/TreeEditor.css
+++ b/Website/wwwroot/css/TreeEditor.css
@@ -100,7 +100,7 @@
     width: 70%;
     max-height: 100%;
     color: azure;
-    font-size: x-large;
+    font-size: 1.25rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow: hidden;
     text-overflow: ellipsis;
