--- a/Website/Views/TopUp/Index.cshtml
+++ b/Website/Views/TopUp/Index.cshtml
@@ -14,6 +14,6 @@
 		background: rgb(122,183,43) !important;" onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
         <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
              style="margin-right: 7px !important; vertical-align: middle !important;" />
-        <span style="vertical-align:middle; !important">Оплатить 25 USD</span>
+        <span style="vertical-align:middle;">Оплатить 25 USD</span>
     </button>
 </form>
