--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -353,7 +353,7 @@
                                 <strong>@ViewData["sum"] грн</strong>
                             </div>
                             <div class="col-3">
-                                <button disabled class="btn btn-info btn-lg btn-block" asp-controller="BotForSalesSettings" asp-action="PriceDetails" asp-route-botId="@ViewData["botId"]" >Подробнее</button>
+                                <button disabled class="btn btn-info btn-lg btn-block" @*asp-controller="BotForSalesSettings" asp-action="PriceDetails"*@ asp-route-botId="@ViewData["botId"]" >Подробнее</button>
                             </div>
                         </div>
                     </div>
