Исправлял разные мелкие баги, немного улучшил работу MultiNode.

--- a/Website/Views/BotCreation/BotForSalesTokenEntry.cshtml
+++ b/Website/Views/BotCreation/BotForSalesTokenEntry.cshtml
@@ -16,7 +16,7 @@ Layout = "_LayoutHome";
 
 <h2 style="text-align:center;" class="my-4">Почти готово!</h2>
 
-<form asp-controller="BotCreation" asp-action="CreateNewBotForSales" asp-anti-forgery="true">
+<form asp-controller="BotCreation" asp-action="CreateNewBotForSales" asp-antiforgery="true">
     <div class="container mw-100">
         <div class="row">
             <div class="myText col-md-7">
