--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                         <div class="row" style="font-weight: 500;">
-                            Для того, чтобы связать аккаунт бота, которого вы настроили в телеграме и сервер нужно установить токен.
+                            Для того, чтобы созданного по разметке бота можно было запустить, нужно указать его токен в Telegram.
                         </div>
                     </div>
                     <div class="col">
