--- a/Website/Views/SignIn/Login.cshtml
+++ b/Website/Views/SignIn/Login.cshtml
@@ -100,7 +100,7 @@
 
 <body>
     <div class="login-form">
-        <form asp-action="Login" asp-controller="SignIn" asp-anti-forgery="true">
+        <form asp-action="Login" asp-controller="SignIn" asp-antiforgery="true">
             <h2 class="text-center">@Localizer["SignIn"]</h2>
             <div class="text-center social-btn" style="display:none;">
                 <a href="#" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
