--- a/Website/Views/ModeratorManagement/Index.cshtml
+++ b/Website/Views/ModeratorManagement/Index.cshtml
@@ -23,37 +23,29 @@
 
 
     <div class="container ">
-        <div class="row m-1 p-1 auto-margin">
-            <div class="col-10 ">
-                <input id="input_1" class="form-control mr-sm-2 " type="search" placeholder="Email" aria-label="Search">
-            </div>
-            <div class="col-2">
-                <button class="btn btn-outline-info my-2 my-sm-0 w-100" type="button" onclick="inviteANewModerator()">Пригласить</button>
+        <div class="input-group row m-1 p-1 auto-margin">
+            <input type="search" class="form-control" id="input_1" placeholder="Email" aria-label="Search" aria-describedby="search-btn">
+            <div class="input-group-append">
+                <button class="btn btn-outline-info" type="button" id="search-btn" onclick="inviteANewModerator()">Пригласить</button>
             </div>
         </div>
-
     </div>
 
 
-
-
-
-    <div style="height:30px;"></div>
-
-    <div id="listOfModerators" class=" align-items-center text-break">
+    <div id="listOfModerators" class="mt-4 align-items-center text-break">
 
     </div>
 
 </div>
 
 @*Шаблон модератора*@
-<div class="@*container*@  border border-info  rounded m-1 justify-content-center " style="display:none; " id="moderator_template">
+<div class="container  border border-info  rounded m-1 justify-content-center mx-auto" style="display:none; " id="moderator_template">
     <div class="row  align-items-center justify-content-center  ">
-        <div class="col-1 h4" style="text-align:center;" id="number">1</div>
-        <div class="col-4 h4" style="text-align:center;" id="name">Иван Иванов</div>
-        <div class="col-5 h4" style="text-align:center;" id="email">ivan.ivanov@@gmail.com</div>
-        <div class="col-2 h4">
-            <button class="btn btn-outline-danger btn-circle btn-circle-sm m-1 myDeleteElement" data-toggle="modal" data-target="#exampleModal">
+        <div class="col-1 h4 my-auto" id="number">1</div>
+        <div class="col-4 h4 my-auto" id="name">Иван Иванов</div>
+        <div class="col-5 h4 my-auto" id="email">ivan.ivanov@@gmail.com</div>
+        <div class="col-2 h4 my-auto">
+            <button class="btn btn-outline-danger btn-circle btn-circle-sm m-1 myDeleteElement float-md-right" data-toggle="modal" data-target="#exampleModal">
                 <span class="oi oi-x"></span>
             </button>
         </div>
