--- a/Website/Views/SignUp/Register.cshtml
+++ b/Website/Views/SignUp/Register.cshtml
@@ -86,7 +86,7 @@
                         <span class="bg-light">OR</span>
                     </p>
 
-                <form asp-action="Register" asp-controller="SignUp" asp-anti-forgery="true">
+                <form asp-action="Register" asp-controller="SignUp" asp-antiforgery="true">
 
                     @*
                         
@@ -181,7 +181,7 @@
 </html>
 
 <!--   asp-anti-forgery="true" asp-antiforgery="true"    -->
-@*<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
+@*<form asp-action="Register" asp-controller="Account" asp-antiforgery="true">
         <div class="validation" asp-validation-summary="ModelOnly" />
         <div>
             <div class="validation" asp-validation-summary="ModelOnly"></div>
